--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,18 +2,103 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <title>Business As Usual</title>
      <link href="/public/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
+
 <body>
+    <div class="utility-nav w-100 d-flex">
+        <div class="container d-flex justify-content-between">
+             <div class="email-phone d-flex ">
+                <div class="phone d-flex align-items-center">
+                    <p class="m-0">440-452-6697</p>
+                </div>
+                <div class="email d-flex align-items-center">
+                    <p class="m-0">cdddschlunt@adelphia.net</p>
+                </div>
+            </div>
+            <div class="social">
+                <a>Facebook</a>
+                <a>Instagram</a>
+                <a>Nextdoor</a>
+            </div>
+        </div>
+    </div>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="/">Navbar</a>
+            <div class="items">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+                            Dropdown link
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="/services/lawn-maintenance">Lawn Maintenance</a>
+                                <a class="dropdown-item" href="/services/landscape-install">Landscape Install</a>
+                                <a class="dropdown-item" href="/services/snow-removal">Snow Removal & Ice Maintenance</a>
+                                <a class="dropdown-item" href="/services/landscape-design">Landscape Design</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/careers">Careers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/gallery">Gallery</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link" href="/contact">Contact</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="btn" href="/contact">Get Quote</a>
+                        </li>
+                    
+                    </ul>
+                </div>
+            </div>
+        </div>  
+    </nav>
 
     {{{body}}}
 
-<script src="/public/js/main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <div class="footer w-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-3">
+                    Logo
+                </div>
+                <div class="col-12 col-lg-3">
 
+                </div>
+                <div class="col-12 col-lg-3">
+
+                </div>
+                <div class="col-12 col-lg-3">
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copyright w-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center text-lg-left">
+                    @Copyright Business As Usual Landscaping/Lawncare/Snow Removal.  All rights reserved. 
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="/public/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 </body>
 </html>
