--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,22 @@
-/* darkest green #0A1F0F */
-/* evergreen - #176225 */
+/* darkest green #0A1F0E */
+/* forest - #176426 */
 /* neon green #2AB746 */
 /* cantalope - #EDF7F0 */
-/* seastead blue - #194862 */
-/* lighter blue - #256A8F */
+/* darker blue - #194862 */
+/* seastead blue - #3A9BCF */
 
 html {
     font-size: 16px;
 }
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Noto Serif', serif;
+}
 
-p {
+p, li, ul, a {
+    font-family: 'Roboto', sans-serif;
+}
+
+p  {
     font-size: 1rem;
     line-height: 1.5rem;
     color: #0A1F0F;
@@ -18,6 +25,11 @@ p {
 .btn {
     background: #2AB746 !important;
     color: white !important;
+    transition: all 350ms ease;
+}
+
+.btn:hover {
+    background: #176426 !important;
 }
 
 /* naviigation */
@@ -30,20 +42,253 @@ p {
 
 .utility-nav p {
     color: white;
+    font-size: 1.125rem;
+    margin-right: 1rem;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
 }
 
+.utility-nav a:hover p{
+    text-decoration: underline;
+}
+
+.utility-nav .social img {
+    width: 24px; 
+    height: 24px;
+    margin-right: 12px;
+}
+
+.utility-nav .social .facebook:hover {
+    filter: invert(67%) sepia(43%) saturate(747%) hue-rotate(78deg) brightness(78%) contrast(97%);
+}
+
+.utility-nav .social .instagram:hover {
+    filter: invert(67%) sepia(43%) saturate(747%) hue-rotate(78deg) brightness(78%) contrast(97%);
+}
+
+.utility-nav .social .facebook,
+.utility-nav .social .instagram {
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(347deg) brightness(101%) contrast(101%);
+}
+
+.utility-nav .email-phone img {
+    width: 24px; 
+    height: 24px;
+    margin-right: 12px;
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(347deg) brightness(101%) contrast(101%);
+}
+
+@media (max-width: 767px) {
+    .utility-nav .email-phone img {
+        margin-right: 1.25rem;
+    }
+} 
+
+
 body .navbar {
-    background: #EDF7f0;
-    padding: 1.25rem; 
+    background: #EDF7F0 !important;
+    padding: 0;
 }
 
 body .navbar a {
     color: #0A1F0F; 
 }
 
+body .navbar .navbar-brand img {
+    height: 70px;
+    width: 70px;
+}
+
+
+
+.navbar .navbar-nav .nav-link {
+    font-size: 22px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    letter-spacing: 0.25;
+    color: #0a1F0E !important;
+}
+
+
+.navbar .dropdown-menu .dropdown-item {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+.navbar .container {
+    flex-wrap: unset !important;
+    display: block !important;
+}
+
+@media (max-width: 991px) {
+    .navbar .btn {
+        display: none;
+    }
+    .navbar .navbar-collapse {
+        padding-bottom: 1rem;
+    }
+    .navbar .dropdown-menu {
+        background: #EDF7F0;
+        border-color:  #0A1F0E;
+    }
+    .navbar-toggler {
+        position: absolute;
+        right: 30px;
+        top: 18px;
+        border: 0 !important;
+        opacity:1;
+    }
+}
+
+@media (min-width: 992px) {
+    .navbar .btn-nav {
+        display: flex;
+        align-items: center;
+    }
+    .navbar .btn {
+        margin-left: .75rem;
+    }
+    .navbar .navbar-collapse {
+        flex-grow: unset;
+    }
+    .navbar .dropdown-menu {
+        background: #EDF7F0;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        border: 0;
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
+    .navbar .col-12 {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+}
+
+.footer {
+    background: #246A8F;
+    padding: 4rem 0;
+    color: white;
+}
+
+.footer p,
+.footer a {
+    color: white;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+    color: white;
+}
+
+.footer .logo img {
+    height: 200px;
+    width: 200px;
+}
+
+.footer .address,
+.footer .phone,
+.footer .email {
+    padding-left: 1.5rem;
+    position: relative;
+}
+
+.footer .address:before {
+    content: '';
+    position: absolute;
+    width: 12px;
+    left: 0;
+    height: 15px;
+    background: url('../images/location.svg') no-repeat;
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(347deg) brightness(101%) contrast(101%);
+}
+
+.footer .email:before {
+    content: '';
+    position: absolute;
+    width: 18px;
+    left: 0;
+    height: 15px;
+    background: url('../images/mail.svg') no-repeat;
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(347deg) brightness(101%) contrast(101%);
+}
+
+.footer .phone:before {
+    content: '';
+    position: absolute;
+    width: 15px;
+    left: 0;
+    height: 15px;
+    background: url('../images/phone.svg') no-repeat;
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(347deg) brightness(101%) contrast(101%);
+}
+
+
+.footer h3 {
+    font-size: 24px;
+    line-height: 42px;
+    letter-spacing: 0.27;
+}
+
+.footer .col-lg-3:not(.logo) {
+    padding-top: 1rem;
+}
+
+.footer .col-lg-2 {
+    padding-top: 1rem;
+}
+
+.footer p {
+    font-size: 14px;
+    letter-spacing: 0.16;
+    line-height: 15px;
+}
+
+@media (max-width: 991px) {
+    .footer .col-12:not(.info){
+        text-align: center;
+    }
+    .footer .info h3,
+    .footer .info p {
+        text-align: center;
+    }
+    .footer .info {
+        display: flex;
+        justify-content: center;
+    }
+    .footer .info .address,
+    .footer .info .phone,
+    .footer .info .email {
+        padding-left: 0;
+    }
+
+    .footer .info .email {
+        padding-left: 1rem;
+    }
+    .footer .info .address:before {
+        left: -10px;
+    }
+    .footer .info .phone:before {
+        left: 5px;
+    }
+    .footer .info .email:before {
+        left: -15px;
+    }
+}
+
 .copyright {
-    background: #194862;
+    background: #194861;
     color: white;
     font-size: 0.75rem;
     padding: 0.75rem;
+}
+
+
+
+/* Homepage Carousel */
+
+
+.carousel-homepage .carousel-item {
+    min-height: 70vh;
 }
