--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,36 @@
-<h1>Hello</h1>
+<div class="carousel-homepage">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="container">
+                <h1>HELLO THIS IS A HEADLINE</h1>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="container">
+                <h1>HELLO THIS IS A HEADLINE</h1>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="container">
+                <h1>HELLO THIS IS A HEADLINE</h1>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </button>
+    </div>
+</div>
+
