--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,20 +8,54 @@
     
     <div class="carousel-inner">
         <div class="carousel-item active">
+            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-1.jpg')"></div>
+            <div class="overlay w-100 h-100"></div>
             <div class="container">
-                <h1>HELLO THIS IS A HEADLINE</h1>
+                <div class="row">
+                    <div class="col-12 col-lg-7">
+                        <div class="text-container">
+                            <h2>Business As Usual</h2>
+                            <h1>Landscaping and Snow Maintenance For Over 30 Years</h1>
+                            <p>A family-run operation specializing in all things landscaping, landscape design, and weather maintenance.</p>
+                            <a class="btn" href="/about">About Us</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item" >
+            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-2.jpg')"></div>
+            <div class="overlay w-100 h-100"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-7">
+                        <div class="text-container">
+                            <h2>Business As Usual</h2>
+                            <h1>Landscaping and Snow Maintenance For Over 30 Years</h1>
+                            <p>A family-run operation specializing in all things landscaping, landscape design, and weather maintenance.</p>
+                            <a class="btn" href="/about">About Us</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="carousel-item">
+            <div class="image w-100 h-100" style="background-image: url('/public/images/slide-3.jpg')"></div>
+            <div class="overlay w-100 h-100"></div>
             <div class="container">
-                <h1>HELLO THIS IS A HEADLINE</h1>
+                <div class="row">
+                    <div class="col-12 col-lg-7">
+                        <div class="text-container">
+                            <h2>Business As Usual</h2>
+                            <h1>Landscaping and Snow Maintenance For Over 30 Years</h1>
+                            <p>A family-run operation specializing in all things landscaping, landscape design, and weather maintenance.</p>
+                            <a class="btn" href="/about">About Us</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="carousel-item">
-            <div class="container">
-                <h1>HELLO THIS IS A HEADLINE</h1>
-            </div>
-        </div>
+        <div class="overlay"></div>
     </div>
     <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
