--- a/views/snow-ice.handlebars
+++ b/views/snow-ice.handlebars
@@ -1,1 +1,20 @@
 <h1>Snow Ice</h1>
+<div class="cta-band darkgreen">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-5">
+                <h4>QUESTIONS?</h4>
+                <h2>Get In Contact!</h2>
+                <a class="btn" href="/contact">Contact Page</a>
+            </div>
+            <div class="col-12 col-lg-3">
+                <img src="/public/images/phone.svg" alt="phone icon">
+                <a href="tel:4404526697"><h4>440-452-6697</h4></a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <img src="/public/images/mail.svg" alt="phone icon">
+                <a href="mailto:"><h4>cdddschlunt@adelphia.net</h4></a>
+            </div>
+        </div>
+    </div>
+</div>
