--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,6 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
-    
     <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="image w-100 h-100" style="background-image: url('/public/images/slide-1.jpg')"></div>
@@ -65,6 +64,25 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </button>
+    </div>
+</div>
+<div class="cta-band darkgreen">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-5">
+                <h4>QUESTIONS?</h4>
+                <h2>Get In Contact!</h2>
+                <a class="btn" href="/contact">Contact Page</a>
+            </div>
+            <div class="col-12 col-lg-3">
+                <img src="/public/images/phone.svg" alt="phone icon">
+                <a href="tel:4404526697"><h4>440-452-6697</h4></a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <img src="/public/images/mail.svg" alt="phone icon">
+                <a href="mailto:"><h4>cdddschlunt@adelphia.net</h4></a>
+            </div>
+        </div>
     </div>
 </div>
 
