--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -66,6 +66,61 @@
     </button>
     </div>
 </div>
+
+<div class="espot-homepage">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-3">
+                <div class="card">
+                    <img src="/public/images/star.svg" alt="star icon">
+                    <h2>Quality Service</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur, adipsciping elit, sed do eiusmod tempor incident ut labore.</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-3">
+                 <div class="card">
+                    <img src="/public/images/expert.svg" alt="graduation cap icon">
+                    <h2>Expert Staff</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur, adipsciping elit, sed do eiusmod tempor incident ut labore.</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-3">
+                 <div class="card">
+                    <img src="/public/images/tree.svg" alt="tree icon">
+                    <h2>Local Resources</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur, adipsciping elit, sed do eiusmod tempor incident ut labore.</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-3">
+                <div class="card">
+                    <img src="/public/images/people.svg" alt="person icon">
+                    <h2>Customer Focused</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur, adipsciping elit, sed do eiusmod tempor incident ut labore.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="homepage-twocol">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <img class="img-fluid" src="/public/images/homepage-twocol.png" alt="block images of snow, trees landscaping">
+            </div>
+             <div class="col-12 col-lg-6 d-lg-flex align-items-lg-center">
+                <div>
+                    <h3>ABOUT US</h3>
+                    <h2>Excellence in <span>Landscape Design and Builds</span> - Business As Usual!</h2>
+                    <p>Landscaping can help to tell a story about your property - whether that be residential or commercial. Our team can put together a comprehensive landscape design and maintenance plan to help you meet the needs of your property - whatever they may be!</p>
+                    <a href="/contact">
+                        <img src="/public/images/document.svg" alt="document icon">
+                        <h5>ASK ABOUT OUR </br>FREE ESTIMATES!</h5>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="cta-band darkgreen">
     <div class="container">
         <div class="row">
@@ -85,4 +140,3 @@
         </div>
     </div>
 </div>
-
