--- a/views/service-landing.handlebars
+++ b/views/service-landing.handlebars
@@ -1,4 +1,3 @@
-<h1>Service Landing</h1>
 <div class="cta-band lightgreen">
     <div class="container">
         <div class="row">
@@ -14,6 +13,64 @@
             <div class="col-12 col-lg-4">
                 <img src="/public/images/mail.svg" alt="phone icon">
                 <a href="mailto:"><h4>cdddschlunt@adelphia.net</h4></a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="services-landing dark">
+    <img class="leaves-left" src="/public/images/leaves-transparent.png" alt="transparent leaf icons">
+    <img class="leaves-right" src="/public/images/leaves-transparent.png" alt="transparent leaf icons">
+    <div class="container">
+        <div class="row d-lg-flex justify-content-lg-center">
+            <div class="col-12 col-lg-4 text-center main-text">
+                <h3>SERVICES</h3>
+                <h2>What We <span>Offer</span> </h2>
+                <hr>
+                <p>Check out our main service </br>categories here! </p>
+            </div>
+        </div>
+        <div class="row d-lg-flex justify-content-lg-center">
+            <div class="col-12 col-lg-4">
+                <div class="card">
+                    <img class="card-img-top" src="/public/images/lawn.jpg" alt="lawnmower">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Lawn Maintenance</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="/services/lawn-maintenance" class="btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4">
+                <div class="card">
+                    <img class="card-img-top" src="/public/images/snow.png" alt="snow and ice">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Snow Removal & Ice Control</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="/services/snow-ice" class="btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+         <div class="row d-lg-flex justify-content-lg-center">
+            <div class="col-12 col-lg-4">
+                <div class="card">
+                    <img class="card-img-top" src="/public/images/landscaping.png" alt="landscaping">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Landscape Installtion</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="/services/landscape-install" class="btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4">
+                <div class="card">
+                    <img class="card-img-top" src="/public/images/design.png" alt="lawnmower">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Landscape Design</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="/services/landscape-design" class="btn">Read More</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
