--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,4 +1,14 @@
-<h1>About</h1>
+<div class="interior-banner about">
+    <div class="overlay h-100 w-100"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-8">
+                <h1>About Us</h1>
+                <p>Trust us to get the details right on whatever type of </br>property you own or manage in NE Ohio!</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="cta-band lightgreen">
     <div class="container">
         <div class="row">
