--- a/views/careers.handlebars
+++ b/views/careers.handlebars
@@ -1,1 +1,11 @@
-<h1>Careers</h1>
+<div class="interior-banner careers">
+    <div class="overlay h-100 w-100"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-8">
+                <h1>Careers</h1>
+                <p>Always hiring good people.</br>We can't wait to hear from you!</p>
+            </div>
+        </div>
+    </div>
+</div>
