--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,1 +1,11 @@
-<h1>Contact</h1>
+<div class="interior-banner contact">
+    <div class="overlay h-100 w-100"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-8">
+                <h1>Contact</h1>
+                <p>Questions? Feel free to contact</br>us via any of the methods below!</p>
+            </div>
+        </div>
+    </div>
+</div>
