--- a/views/service-landing.handlebars
+++ b/views/service-landing.handlebars
@@ -1,3 +1,14 @@
+<div class="interior-banner services-yeah">
+    <div class="overlay h-100 w-100"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-8">
+                <h1>Commerical and Residential Landscaping Services</h1>
+                <p>Offering outdoor maintenance services throughout Northeast Ohio for over 30 years!</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="cta-band lightgreen">
     <div class="container">
         <div class="row">
