--- a/views/landscape-installation.handlebars
+++ b/views/landscape-installation.handlebars
@@ -1,5 +1,16 @@
-<h1>Landscape Installation</h1>
-<div class="cta-band darkgreen">
+<div class="inner-banner darker-green">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <h2>Services</h2>
+                <hr>
+                <h1>Landscape Installation</h1>
+                <p>Trust us to get the details right on whatever type of property you own or manage in NE Ohio!</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="cta-band lightgreen">
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-5">
