--- a/views/lawn-maintenance.handlebars
+++ b/views/lawn-maintenance.handlebars
@@ -1,4 +1,15 @@
-<h1>Lawn Maintenance</h1>
+<div class="inner-banner lighter-green">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <h2>Services</h2>
+                <hr>
+                <h1>Lawn Maintenance</h1>
+                <p>Trust us to get the details right on whatever type of property you own or manage in NE Ohio!</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="cta-band darkgreen">
     <div class="container">
         <div class="row">
