--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,9 +56,9 @@
                                 </a>
                                 <div class="dropdown-menu">
                                 <a class="dropdown-item" href="/services/lawn-maintenance">Lawn Maintenance</a>
-                                <a class="dropdown-item" href="services/snow-removal">Snow Removal & Ice Control</a>
-                                <a class="dropdown-item" href="services/landscape-install">Landscape Installation</a>
-                                <a class="dropdown-item" href="services/landscape-design">Landscape Design</a>
+                                <a class="dropdown-item" href="/services/snow-removal">Snow Removal & Ice Control</a>
+                                <a class="dropdown-item" href="/services/landscape-install">Landscape Installation</a>
+                                <a class="dropdown-item" href="/services/landscape-design">Landscape Design</a>
                                 </div>
                             </li>
                             <li class="nav-item">
