--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -150,7 +150,7 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Snow Removal & Ice Control</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="/services/snow-ice" class="btn">Read More</a>
+                        <a href="/services/snow-removal" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
