--- a/views/careers.handlebars
+++ b/views/careers.handlebars
@@ -9,3 +9,40 @@
         </div>
     </div>
 </div>
+<div class="careers-four-col">
+    <div class="container">
+        <div class="row d-flex justify-content-center">
+            <div class="col-12 col-lg-4 text-center main-text">
+                <h2>WE'RE <span>HIRING!</span></h2>
+                <hr>
+                <p>Currently hiring for all seasons! </br> Apply today!</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-3">
+                <div class="cards">
+                    <h3>Established Company</h3>
+                    <p>We're been in business for over 3- years, so trust us when we say, we know a thing or two!</p>
+                </div>
+            </div>
+             <div class="col-12 col-lg-3">
+                <div class="cards">
+                    <h3>Employee Focused</h3>
+                    <p>Our employees are the backbone of our company.. We do what's right by our own!</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-3">
+                <div class="cards">
+                    <h3>Accelerated Growth</h3>
+                    <p>The growth we've seen over the past few years has been unprecedented - and we're still growing!</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-3">
+                <div class="cards">
+                    <h3>Great Culture</h3>
+                    <p>We are proud to be a family-operated business that proudly runs on hard work and honesty.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
