--- a/views/lawn-maintenance.handlebars
+++ b/views/lawn-maintenance.handlebars
@@ -10,6 +10,38 @@
         </div>
     </div>
 </div>
+<div class="service-detail">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h6 class="other">Other Services</h6>
+                        <div class="links">
+                            <a href="/services/snow-removal">Snow Removal & Ice Control</a>
+                            <a href="/services/landscape-install">Landscape Installationl</a>
+                            <a href="/services/snow-removal">Snow Removal</a>
+                        </div>
+                        <h6>Contact</h6>
+                        <div class="d-flex">
+                            <img src="/public/images/phone.svg" alt="phone icon">
+                            <a href="tel:4404526697"><h4>440-452-6697</h4></a>
+                        </div>
+                        <div class="d-flex">
+                             <img src="/public/images/mail.svg" alt="phone icon">
+                             <a href="mailto:"><h4>cdddschlunt@adelphia.net</h4></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-8">
+                <div class="content">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="cta-band darkgreen">
     <div class="container">
         <div class="row">
